[package]
name = "luneweb"
version = "0.3.0"
edition = "2021"

[[bin]]
name = "luneweb"
path = "src/main.rs"

[dependencies.lune-std]
git = "https://github.com/LuneWeb/Lune"
rev = "8c58dc4b09a3211dc9b880ddd0f335108cf0ff42"
package = "lune-std"

[dependencies.lune-std-serde]
git = "https://github.com/LuneWeb/Lune"
rev = "8c58dc4b09a3211dc9b880ddd0f335108cf0ff42"
package = "lune-std-serde"

[dependencies.lune-utils]
git = "https://github.com/LuneWeb/Lune"
rev = "8c58dc4b09a3211dc9b880ddd0f335108cf0ff42"
package = "lune-utils"

[dependencies.mlua-luau-scheduler]
git = "https://github.com/LuneWeb/Lune"
rev = "8c58dc4b09a3211dc9b880ddd0f335108cf0ff42"
package = "mlua-luau-scheduler"

[dependencies]
mlua = { version = "0.9.9", features = ["luau", "async"] }
tokio = { version = "1.38.0", features = ["full"] }
wry = "0.41.0"
tao = "0.28.1"
thread_local = "1.1.8"

clap = { version = "4.5.8", features = ["derive"] }
serde = { version = "1.0.203", features = ["derive"] }
toml = "0.8.14"
include_dir = "0.7.4"

# lune-utils = "0.1.0"
# lune-std-serde = "0.1.0"
# serde = "1.0.202"
# serde_json = "1.0.117"
# http = "1.1.0"
# bstr = "1.9.1"
# once_cell = "1.19.0"
