[package]
name = "luneweb2"
version = "0.1.0"
edition = "2021"

[dependencies]
mlua = { version = "*", features = [
    "luau",
    "luau-jit",
    "async",
    "send",
    "error-send",
] }

smol = "*"
flume = "*"
async-broadcast = "0.7.1"
event-listener = "5.3.1"

tao = "*"
wry = { version = "*", features = ["devtools"] }
