[package]
name = "luneweb"
version = "2.0.0-rc1"
edition = "2021"

[dependencies]
mlua = { version = "*", features = [
    "luau",
    "luau-jit",
    "async",
    "send",
    "error-send",
] }

smol = "*"
flume = "*"
async-broadcast = "0.7.1"
async-event = "0.2.1"

tao = "*"
wry = { version = "*", features = ["devtools"] }
path-clean = "1.0.1"
