[package]
name = "luneweb-app"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
mlua = { version = "0.9.9", features = ["luau", "async"] }
tokio = { version = "1.38.0", features = ["full"] }
wry = "0.41.0"
tao = "0.28.1"

[dependencies.mlua-luau-scheduler]
git = "https://github.com/LuneWeb/Lune"
rev = "94dc83f19c3ea8bc072898f39dfb9b3a90e77abd"
package = "mlua-luau-scheduler"

[dependencies.lune-utils]
git = "https://github.com/LuneWeb/Lune"
rev = "94dc83f19c3ea8bc072898f39dfb9b3a90e77abd"
package = "lune-utils"

[dependencies.lune-std-serde]
git = "https://github.com/LuneWeb/Lune"
rev = "94dc83f19c3ea8bc072898f39dfb9b3a90e77abd"
package = "lune-std-serde"
