[package]
name = "luneweb"
version = "0.6.0-beta3"
edition = "2021"

[[bin]]
name = "luneweb"
path = "src/main.rs"

[dependencies]
mlua-luau-scheduler = "0.0.2"
luneweb-std = { version = "1.0.0", path = "../std" }
luneweb-rs = { version = "1.0.0", path = "../rust" }
lune-std = "0.1.5"

mlua = { version = "0.9.9", features = ["luau", "async"] }
tokio = { version = "1.40.0", features = ["full"] }

clap = { version = "4.5.17", features = ["derive"] }
directories = "5.0.1"
once_cell = "1.19.0"
include_dir = "0.7.4"
