[package]
name = "luneweb-std"
version = "0.1.0"
edition = "2021"

[dependencies]
mlua-luau-scheduler = "0.0.2"
lune-std-task = "0.1.1"
luneweb-rs = { version = "0.1.0", path = "../luneweb-rs" }
tokio = { version = "1.38.0", features = ["full"] }
mlua = { version = "0.9.9", features = ["luau", "async"] }
tao = "0.28.1"
