[package]
name = "luneweb-std-window"
version = "2.1.0"
edition = "2021"

[dependencies]
mlua-luau-scheduler = "0.0.2"
lune-std-serde = "0.1.2"
tokio = { version = "1.38.0", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["sync"] }
luneweb-rs = { version = "2.1.1", path = "../rust" }
mlua = { version = "0.9.9", features = ["luau", "async"] }
tao = "0.28.1"
