[package]
name = "luneweb-std"
version = "1.0.0"
edition = "2021"

[dependencies]
mlua-luau-scheduler = "0.0.2"
luneweb-rs = { version = "1.0.0", path = "../rust" }
tokio = { version = "1.40.0", features = ["full"] }
mlua = { version = "0.9.9", features = ["luau", "async"] }

# STDs
luneweb-std-window = { version = "1.0.0", path = "../std-window" }
luneweb-std-audio = { version = "1.0.0", path = "../std-audio" }

### used in examples
[dev-dependencies]
lune-std = "0.1.5"
